--- a/index.html
+++ b/index.html
@@ -1,1 +1,117 @@
 <!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Operating System Quiz</title>
+    <style>
+    * {
+        border:none;
+        margin: 0px;
+        padding: 0px;
+        font-family: "Lato";
+    }
+        * {
+        margin: 0px;
+        padding: 0px;
+        border: none;
+        font-family: "Lato",sans-serif;
+        color: inherit;
+        text-decoration: none;
+    }
+    body{
+        overflow-x: hidden;
+        width: 100vw;
+        min-height: 100vh;
+    }
+    :root{
+        --theme-color-1: #2ecc71;
+        --theme-color-2: #3498db;
+    }
+    #test {
+        background-color: black;
+        background-size: auto 100%;
+        background-position: center;
+        text-align: center;
+        display: inline-block;
+        float: left;
+        height: 100%;
+    }
+    #test footer{
+        position: relative;
+        float: left;
+    }
+    .question {
+        width: 100%;
+        display: inline-block;
+        float: left;
+        position: relative;
+    }
+    .question h1{
+        color: var(--theme-color-1);
+        font-weight: 900;
+        font-size: 2.75vw;
+        text-shadow: 0 0 20px black;
+        text-align: center;
+        height: 9vh;
+        line-height: 9vh;
+        display: block;
+    }
+    .question ul {
+        list-style: none;
+        display: block;
+        float: left;
+    }
+    .question ul li {
+        color: white;
+        font-weight: normal;
+        font-size: 2vw;
+        text-shadow: 0 0 20px black;
+        text-align: center;
+        height: 9vh;
+        line-height: 9vh;
+        display: inline-block;
+        width: 50vw;
+        border: 6px solid var(--theme-color-2);
+        margin-top: 1vh;
+        margin-bottom: 1vh;
+        transition: color 0.2s, background-color 0.2s, border 0.2s;
+    }
+    .question ul li:hover{
+        border: 6px solid white;
+        cursor: pointer;
+    }
+    .question ul li.selected {
+        border: 6px solid white;
+        background-color: white;
+        color: #1d567b;
+        font-weight: 700;
+        text-shadow: none;
+    }
+    .submitbtn{
+        color: white;
+        padding: 0px;
+        font-weight: normal;
+        font-size: 2.25vw;
+        text-shadow: 0 0 20px black;
+        text-align: center;
+        height: 15vh;
+        display: inline-block;
+        padding-left: 5vh;
+        padding-right: 5vh;
+        background-color: transparent;
+        outline: none;
+        border: 6px solid var(--theme-color-1);
+        margin-top: 6vh;
+        margin-bottom: 6vh;
+        transition: color 0.2s, background-color 0.2s;
+    }
+    .submitbtn:hover{
+        color: white;
+        background-color: var(--theme-color-1);
+        cursor: pointer;
+    }
+    </style>
+</head>
